<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.photocardapp.views.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/PhotocardsFragment"
        android:name="com.example.photocardapp.views.PhotocardsFragment"
        android:label="@string/photocards_fragment_label"
        tools:layout="@layout/fragment_photocards" />

    <fragment
        android:id="@+id/ChooseFragment"
        android:name="com.example.photocardapp.views.ChooseFragment"
        android:label="@string/choose_fragment_label"
        tools:layout="@layout/fragment_choose" />


    <fragment
        android:id="@+id/YutaroFragment"
        android:name="com.example.photocardapp.views.YutaroFragment"
        android:label="@string/choose_fragment_label"
        tools:layout="@layout/fragment_yutaro" />

    <action
        android:id="@+id/action_global_FirstFragment"
        app:destination="@id/FirstFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_PhotocardsFragment"
        app:destination="@id/PhotocardsFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_ChooseFragment"
        app:destination="@id/ChooseFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_YutaroFragment"
        app:destination="@id/YutaroFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />
</navigation>
